--- a/public/finder.html
+++ b/public/finder.html
@@ -120,13 +120,17 @@
         
         .form-group textarea {
             width: 100%;
+            max-width: 100%;
+            box-sizing: border-box;
             padding: 1rem;
             border: 2px solid #e9ecef;
             border-radius: 10px;
             font-size: 1rem;
             resize: vertical;
-            min-height: 100px;
+            min-height: 120px;
             font-family: inherit;
+            overflow: auto;
+            word-break: break-word;
         }
         
         .form-group textarea:focus {
